# orGUI

./: .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  LICENSE  NumpyView.py  QReflectionSelector.py  QSpecScanSelector.py  QUBCalculator.py  README.rst  SilxMaskImageWidget.py  cliff.toml  config  meson.build  meson_options.txt  orGUI.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-wheels.yml  release.yml  tests.yml
benchmarks/: benchmark.ipynb  benchmark.json  benchmark_compression.py  benchmark_ctr_numba.ipynb  benchmark_roi_sum_accel.py  ctr_accel_backends.ipynb  roi_sum_accel.ipynb  verify_ctr_numba_host.py
buildtools/: detect_msvc_arch.cpp
doc/: check_rtd_imports.py  generate_release_notes.py  requirements.txt
doc/source/: acceleration_backends.rst  api.rst  automatic_ub_setting.rst  beamline_backends.rst  conf.py  ctr_resolution.rst  ctr_structure_factors.rst  developer.rst  entry_points.rst  geometry.rst  gui_overview.rst  image_integration.rst  index.rst  installation.rst  manual_reflection_setting.rst  release_notes.rst  release_procedure.rst  startup_configuration.rst  ub_matrix.rst  wyckoff_fitting.rst
doc/source/_static/: custom.css
doc/source/_templates/sidebar/: brand.html
doc/source/benchmarks/: ctr_accel_backends.ipynb  roi_sum_accel.ipynb
doc/source/parallax/: calibration_20keV.poni  sensor_thickness_corrections.ipynb
doc/source/parallax/.ipynb_checkpoints/: sensor_thickness_corrections-checkpoint.ipynb
doc/source/parallax/.virtual_documents/: Untitled.ipynb
examples/: P3_100_calib.poni  automatic_rocking_extraction.py  config_P212  config_id31_EBS  config_mask_only  config_mask_pixel_repair  config_minimal  config_withPoni_backendfile  config_withPoni_noXtal  config_withPoni_withBulfile  config_withPoni_withCiffile  config_withPoni_withXtalfile  poni_example.poni
examples/CTR/: RuO2_TiO2_Poisson_etching.xpr  RuO2_TiO2_Poisson_etching.xtal
examples/CTR/test/: 0001_fit_2V036_reference.xtal
examples/backend/: CHESS_QM2.py  ID31_EBS_p4_backend.py  P212_backend.py
examples/batch_processing/: batch_integrate.py
examples/crystal_files/: Fe3O4(100).bul  Pt100_with_surface_model.xtal
examples/poni_files/: README.txt  poni.poni
hdf_locking_tests/: orgui_h5open_test.ipynb  test_locking.h5
hdf_locking_tests/data/: proposal_sample.h5
hdf_locking_tests/data/sample_0001/: sample_0001.h5
hdf_locking_tests/data/sample_0001/scan_0001/: p3_0000.h5
orgui/: __init__.py  _build_config.py.in  logger_settings.py  logger_utils.py  main.py
orgui/app/: AGENTS.md  ArrayTableDialog.py  MaskConfigDialog.py  QHKLDialog.py  QReflectionSelector.py  QScanSelector.py  QSpecScanSelector.py  QUBCalculator.py  ROIutils.py  __init__.py  _peak_search_accel.py  _roi_sum_accel.py  _roi_sum_numba.py  autoBraggSearch.py  autoBraggWorkflow.py  bgroi.py  config_data.py  database.py  fscan.py  imagePeakFinder.py  mask_config.py  orGUI.py  peak1Dintegr.py  qutils.py
orgui/app/cpp/: peak_search_cpp.cpp  roi_sum_cpp.cpp
orgui/app/test/: test_auto_bragg_search.py  test_config_data.py  test_image_peak_finder.py  test_mask_config.py  test_orGUI_reflections.py  test_peak_search_accel.py  test_roi_sum_accel.py
orgui/backend/: __init__.py  backends.py  interlacedScanLoader.py  scans.py  udefaults.py  universalScanLoader.py
orgui/backend/beamline/: ID31DiffractLinTilt.py  P212_tools.py  __init__.py  fio_reader.py  id31_tools.py
orgui/datautils/: __init__.py  util.py
orgui/datautils/xrayutils/: AGENTS.md  CTRcalc.py  CTRdistributions.py  CTRfilm.py  CTRopt.py  CTRoptics.py  CTRplotutil.py  CTRresolution.py  CTRstacking.py  CTRsymmetry.py  CTRuc.py  CTRutil.py  DetectorCalibration.py  HKLVlieg.py  ReciprocalNavigation.py  _CTRcalc_accel.py  __init__.py  element_data.py
orgui/datautils/xrayutils/cpp/: CTRcalc_cpp.cpp
orgui/datautils/xrayutils/test/: __init__.py  test_CTRcalc.py  test_CTRoptical_profile.py  test_CTRresolution.py  test_CTRsymmetry.py  test_DetectorCalibration.py  test_HKLcalc.py
orgui/datautils/xrayutils/test/testdata/: 0V12_calculated.xpr
orgui/datautils/xrayutils/unitcells/: Pt100.bul  Pt100_small.bul  Pt110.bul  Pt111.bul  Pt310.bul  Pt3O4(100).bul  PtO(001).bul  PtO(010).bul  PtO(100).bul  TiO2(100).xtal  __init__.py  a-PtO2(0001).bul
orgui/resources/: __init__.py
