[project]
name = 'orGUI'
dynamic = ['version',]
license = "MIT"
requires-python = '>=3.8'
readme = 'README.rst'
description = 'orGUI: Orientation and Integration with 2D detectors'

authors = [
  { name = 'Timo Fuchs', email = 'tfuchs@cornell.edu' }
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Win32 (MS Windows)',
	'Environment :: X11 Applications :: Qt',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Software Development :: Libraries :: Python Modules'
]

dependencies = [
	'numpy >= 1.12',
	'scipy >= 1.0',
	'matplotlib >= 1.2',
	'fabio >= 0.7',
	'silx >= 1.1',
	'pyFAI >= 0.19',
	'pymca >= 5.3',
	'xraydb >= 4.0',
	'pytz >= 2022'
]

[project.optional-dependencies]
console = ['qtconsole']
speedup = ['numba']
extendedfilesupport = ['ase', 'hdf5plugin']
full = ['qtconsole', 'ase', 'numba' , 'PyOpenGL', 'hdf5plugin']

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  
include = ["orgui*"]  
exclude = ["orgui.datautils.xrayutils.tests*"] 
namespaces = true 

[project.scripts] #
orGUI='orgui.main:main'

[tool.setuptools.dynamic]
version = {attr = "orgui.__version__"}

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"orgui.resources.icons" = ['*.svg','*.png']
"orgui.datautils.xrayutils.unitcells" = ['*.bul', '*.sur', '*.xtal', '*.xpr']