[project]
name = 'orGUI'
dynamic = ['version',]
license = "MIT"
requires-python = '>=3.8'
readme = 'README.rst'
description = 'orGUI: Orientation and Integration with 2D detectors'

authors = [
  { name = 'Timo Fuchs', email = 'tfuchs@cornell.edu' }
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Win32 (MS Windows)',
	'Environment :: X11 Applications :: Qt',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Software Development :: Libraries :: Python Modules'
]

dependencies = [
	'numpy >= 1.12',
	'scipy >= 1.0',
	'matplotlib >= 1.2',
	'fabio >= 0.7',
	'silx >= 1.1',
	'pyFAI >= 0.19',
	'xraydb >= 4.0',
	'pytz >= 2022'
]

[project.optional-dependencies]
console = ['qtconsole']
speedup = ['numba']
extendedfilesupport = ['ase', 'hdf5plugin']
full = ['qtconsole', 'ase', 'numba' , 'PyOpenGL', 'hdf5plugin']
full-devel = ['qtconsole', 'ase', 'numba' , 'PyOpenGL', 'hdf5plugin', 'ruff', 'pyupgrade']

[build-system]
requires = ["setuptools >= 80.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  
include = ["orgui*"]  
exclude = ["orgui.datautils.xrayutils.tests*"] 
namespaces = true 

[project.scripts] #
orGUI='orgui.main:main'

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"orgui.resources.icons" = ['*.svg','*.png']
"orgui.datautils.xrayutils.unitcells" = ['*.bul', '*.sur', '*.xtal', '*.xpr']

[tool.setuptools_scm]
version_file = "orgui/_version.py"
fallback_version = "1.4.1+nogit"

[tool.ruff]
# Target Python version for pyupgrade
target-version = "py310"
# Optional: autofix
# fix = true

[tool.ruff.lint]
# Ruff 0.4+ uses this section for rule configuration
# Enable linting for NumPy 2.x deprecations and general cleanup
select = [
    "E", "F", "W",          # Pyflakes / pycodestyle
    "UP",                   # pyupgrade rules
    "NPY",                  # NumPy-specific rules (NumPy 2.x)
]
ignore = [
    # Add ignores here if needed
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["NPY002"]  # Example: ignore certain NumPy rules in tests
